Bug 431447 - Tooltips: text is clipped
Summary: Tooltips: text is clipped
Status: RESOLVED FIXED
Alias: None
Product: filelight
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR minor
Target Milestone: ---
Assignee: Martin Sandsmark
URL:
Keywords:
: 456176 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-01-11 16:20 UTC by ba-taha
Modified: 2022-07-01 06:07 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 22.08
Sentry Crash Report:


Attachments
The tooltip text is clipped near the end (74.06 KB, image/png)
2021-01-11 16:20 UTC, ba-taha
Details
Screenshot (191.46 KB, image/png)
2021-01-15 01:08 UTC, Justin Zobel
Details
image 1 (88.66 KB, image/png)
2021-03-17 07:38 UTC, Mohammed Sameer
Details
image 2 (74.45 KB, image/png)
2021-03-17 07:40 UTC, Mohammed Sameer
Details
use-sizehint.patch (1.01 KB, patch)
2021-11-21 15:33 UTC, Alexey Sakovets
Details

Note You need to log in before you can comment on or make changes to this bug.
Description ba-taha 2021-01-11 16:20:40 UTC
Created attachment 134743 [details]
The tooltip text is clipped near the end

SUMMARY
Filelight's (Version 20.12.1) tooltips are sometimes incorrectly clipped, some locations do not suffer from this issue when mouse is placed over them, but the most affected files are located in the following directories: /usr, /opt, /lib

STEPS TO REPRODUCE
1. Open Filelight
2. Navigate to /usr, /opt, /lib
3. Mouse over some locations

OBSERVED RESULT
Tooltips are clipped incorrectly

EXPECTED RESULT
Tooltip size should fit text

SOFTWARE/OS VERSIONS
Windows: N/A
macOS: N/A
Linux/KDE Plasma: 5.10.6-arch1-1
(available in About System)
KDE Plasma Version: 5.20.5
KDE Frameworks Version: 5.78.0 
Qt Version: 5.15.2

ADDITIONAL INFORMATION
Long path names and short path names also have this issue
Comment 1 Justin Zobel 2021-01-15 01:08:51 UTC
Created attachment 134871 [details]
Screenshot

I'm unable to replicate this issue. See screenshot, my tooltip extends beyond the window to show the full path.
Comment 2 Mohammed Sameer 2021-03-17 07:37:45 UTC
I can reproduce the issue.
Comment 3 Mohammed Sameer 2021-03-17 07:38:52 UTC
Created attachment 136769 [details]
image 1
Comment 4 Mohammed Sameer 2021-03-17 07:40:02 UTC
Created attachment 136770 [details]
image 2
Comment 5 Justin Zobel 2021-03-17 07:42:58 UTC
Thanks for confirming.
Comment 6 Alexey Sakovets 2021-11-21 15:33:46 UTC
Created attachment 143804 [details]
use-sizehint.patch
Comment 7 Alexey Sakovets 2021-11-21 15:35:07 UTC
Can confirm. use-sizehint.patch solves the issue for me.
Comment 8 Harald Sitter 2022-04-26 19:52:44 UTC
Git commit 248030dbdfcfae9ff493a443808af334a88174cd by Harald Sitter.
Committed on 26/04/2022 at 19:45.
Pushed by sitter into branch 'master'.

correctly calculate fontmetrics

- use the fontmetrics of the target label not the application (makes no
difference but is practically more correct)
- use horizontalAdvance instead of boundingrect width. the latter is
relative to the rect coordinates and as such not nearly as straight
forward to use. horizontaladvance is the actual width the text will
occupy, it's what we intend to know here

M  +2    -2    src/radialMap/item.cpp

https://invent.kde.org/utilities/filelight/commit/248030dbdfcfae9ff493a443808af334a88174cd
Comment 9 Harald Sitter 2022-07-01 06:07:40 UTC
*** Bug 456176 has been marked as a duplicate of this bug. ***