correctly calculate fontmetrics

- use the fontmetrics of the target label not the application (makes no
difference but is practically more correct)
- use horizontalAdvance instead of boundingrect width. the latter is
relative to the rect coordinates and as such not nearly as straight
forward to use. horizontaladvance is the actual width the text will
occupy, it's what we intend to know here

BUG: 431447